<resources>
    <string name="app_name">SecondKotlin</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="guard">Guard</string>
    <string name="open_when_you_are_on_a_potentionally_dangerous_journey">Open when you are on a potentionally dangerous journey</string>
    <string name="in_case_of_emergy_keep_telling_family_members_to_contact_me">In case of emergy, keep telling family members to contact me</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>